--- a/code_bravo.html
+++ b/code_bravo.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="code-display">
-        <h1>Alpha 組 解鎖碼</h1>
+        <h1>Bravo 組 解鎖碼</h1>
         
         <div class="symbol-display" id="symbol-display">...</div>
         
