--- a/code_charlie.html
+++ b/code_charlie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>鷹眼行動 - Alpha 組</title>
+    <title>鷹眼行動 - Charlie 組</title>
     <style>
         /* (大部分 CSS 保持不變) */
         body {
