調整任務說明用字

--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
             <h2>任務目標 (進階協議)</h2>
             <p>你們的團隊必須解讀並排序三組加密情報：</p>
             <ol>
-                <li><strong>教官 (Instructor):</strong> 在本頁下方使用秘密入口，以「啟動任務」並產生所有人的專屬連結。</li>
+                <li><strong>教官 (Instructor):</strong> 請使用秘密入口「啟動任務」</li>
                 
                 <li><strong>情報小組 (Alpha, Bravo, Charlie):</strong> 教官將分別提供 3 個連結。你們會各自獲得一組 <strong>4 位密碼</strong> 以及一個 <strong>關鍵符號</strong>（例如：🔺）。</li>
-                <li><strong>拆彈小組 (Defuse):</strong> 教官將提供「拆彈主頁」的連結。你們會看到一個 <strong>「謎題順序」</strong>（例如：1. ⏹️，2. 🔺，3. ⭕）。</li>
-                <li><strong>團隊合作：</strong> 你們必須**透過無線電**（使用北約音標）彙整所有情報，找出**哪個符號對應哪組密碼**，然後**依照「謎題順序」**輸入 12 位密碼。</li>
+                <li><strong>拆彈小組 (Defuse):</strong> 教官將提供「拆彈主頁」的連結。你們會看到一個 <strong>「拆除炸彈」</strong>畫面。</li>
+                <li><strong>團隊合作：</strong> 你們必須透過無線電（使用北約音標）彙整所有情報，找出哪個符號對應哪組密碼，然後依照「謎題順序」輸入 12 位密碼。</li>
                 </ol>
             <p>通訊和解讀是這次任務的關鍵。祝你好運。</p>
         </div>
