--- a/lobby_standard.html
+++ b/lobby_standard.html
@@ -117,15 +117,15 @@
             <div class="role-box" id="intel-box">
                 <h2>...我是情報組 (Intel)...</h2>
                 <p>你的任務是找到情報官、獲取密碼片段，並清晰地回報給拆彈小組。</p>
-                <a href="guide_standard_intel.html" target="_blank">▶ 閱讀情報組完整指引</a>
-                <img src="image/qrcode_std_intel.png" alt="情報小組指引 QR Code" class="qrcode-image">
+                <a href="https://kamiyu94.github.io/bomb_defuser/guide_standard_intel.html" target="_blank">▶ 閱讀情報組完整指引</a>
+                <img src="https://kamiyu94.github.io/bomb_defuser/image/qrcode_std_intel.png" alt="情報小組指引 QR Code" class="qrcode-image">
             </div>
 
             <div class="role-box" id="bomb-box">
                 <h2>...我是拆彈組 (Bomb Squad)...</h2>
                 <p>你的任務是留守基地、準確抄收所有密碼片段，並輸入以解除炸彈。</p>
-                <a href="guide_standard_bomb.html" target="_blank">▶ 閱讀拆彈組完整指引</a>
-                <img src="image/qrcode_std_bomb.png" alt="拆彈小組指引 QR Code" class="qrcode-image">
+                <a href="https://kamiyu94.github.io/bomb_defuser/guide_standard_bomb.html" target="_blank">▶ 閱讀拆彈組完整指引</a>
+                <img src="https://kamiyu94.github.io/bomb_defuser/image/qrcode_std_bomb.png" alt="拆彈小組指引 QR Code" class="qrcode-image">
             </div>
         </div>
         
