--- a/lobby_advanced.html
+++ b/lobby_advanced.html
@@ -114,15 +114,15 @@
             <div class="role-box" id="intel-box">
                 <h2>...我是情報組 (Intel)...</h2>
                 <p>你的任務是找到情報官，並回報「密碼」和「情報符號」。</p>
-                <a href="guide_advanced_intel.html" target="_blank">▶ 閱讀情報組完整指引</a>
-                <img src="image/qrcode_adv_intel.png" alt="情報小組指引 QR Code" class="qrcode-image">
+                <a href="https://kamiyu94.github.io/bomb_defuser/guide_advanced_intel.html" target="_blank">▶ 閱讀情報組完整指引</a>
+                <img src="https://kamiyu94.github.io/bomb_defuser/image/qrcode_adv_intel.png" alt="情報小組指引 QR Code" class="qrcode-image">
             </div>
 
             <div class="role-box" id="bomb-box">
                 <h2>...我是拆彈組 (Bomb Squad)...</h2>
                 <p>你是「情報分析師」。你的任務是解讀「符號」並找出正確的「輸入順序」。</p>
-                <a href="guide_advanced_bomb.html" target="_blank">▶ 閱讀拆彈組完整指引</a>
-                <img src="image/qrcode_adv_bomb.png" alt="拆彈小組指引 QR Code" class="qrcode-image">
+                <a href="https://kamiyu94.github.io/bomb_defuser/guide_advanced_bomb.html" target="_blank">▶ 閱讀拆彈組完整指引</a>
+                <img src="https://kamiyu94.github.io/bomb_defuser/image/qrcode_adv_bomb.png" alt="拆彈小組指引 QR Code" class="qrcode-image">
             </div>
         </div>
         
